--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "discord.js": "^13.6.0",
     "dotenv": "^11.0.0"
   },
+  "engines": {
+    "node": "16.13.2"
+  },
   "devDependencies": {
     "nodemon": "^2.0.15"
   }
